src/components/Sidebar/Navbar/Navbar.scss
@import '../../../theme';

.navbar,
.navbar-toggle {
  color: $context-timeline-color;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15px;
  cursor: pointer;
  transition: ease-in-out 200ms;

  .icon {
    width: 15px;
    height: 15px;
    color: $context-timeline-color;
  }

  &:hover {
    transition: ease-in-out 200ms;
    gap: 20px;
  }
}

.navbar {
  font-family: 'InriaSerif-Regular';
  font-size: 24px;
  padding: 30px 10px;
}

.nav-overlay {
  position: fixed;
  top: 0;
  right: -100%;
  height: 100vh;
  width: 100vw;
  background-color: rgba(102, 102, 102);
  opacity: 0;
  transition: ease-in-out 450ms;
  z-index: 0;

  &.active {
    right: 0;
    opacity: 0.5;
    transition: ease-in-out 350ms;
  }
}

.nav-menu {
  z-index: 1;
  background-color: white;
  width: 550px;
  height: 100vh;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  right: -100%;
  transition: ease-in-out 850ms;
  overflow-y: scroll;

  a {
    text-decoration: none;
  }

  &.active {
    right: 0;
    transition: ease-in-out 350ms;
  }

  .nav-menu-items {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 30px;
    list-style: none;
    font-size: 2.3vh;
    margin: 0;
    padding: 20px 30px;

    > li {
      width: 100%;
    }

    .navbar-toggle {
      font-size: 3vh;
    }

    .title-items {
      list-style: none;
      padding: 0;
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      gap: 5px;

      .bou a {
        color: $b-timeline-color;
      }

      .chum a {
        color: $c-timeline-color;
      }

      .none a {
        color: $context-timeline-color;
      }

      .both a {
        color: $context-timeline-color;
      }

      .active {
        font-size: 3vh;
      }
    }

    .header-items {
      font-family: 'InriaSerif-Regular';
      font-size: 2vh;
      list-style: none;
      display: flex;
      justify-content: space-between;
      align-items: center;
      gap: 10px;
      padding-inline-start: 0;

      a {
        color: $context-timeline-color;
      }
    }
  }

  .legend {
    display: flex;
    justify-content: space-evenly;
    gap: 15px;
    font-size: 2vh;

    .legend-item {
      display: flex;
      align-items: center;
      gap: 10px;

      .box {
        width: 10px;
        height: 10px;
      }

      .chum-color {
        background-color: $c-timeline-color;
      }

      .bou-color {
        background-color: $b-timeline-color;
      }

      .other-color {
        background-color: $context-timeline-color;
      }
    }
  }
}

